Fixed border radius bug on Safari iOS

--- a/css/assets/_reset.scss
+++ b/css/assets/_reset.scss
@@ -37,9 +37,11 @@ input:focus
 input,
 textarea
 {
+	-webkit-appearance: none;
 	-webkit-box-sizing:content-box;
 	-moz-box-sizing:content-box;
 	box-sizing:content-box;
+	border-radius: 0;
 }
 
 /* These elements are usually rendered a certain way by the browser */
